--- a/my-project/package.json
+++ b/my-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ytgta",
+  "name": "GTA_VI_Website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,44 +9,13 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {{
-  "name": "gta-vi-website",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "gsap": "^3.13.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remixicon": "^4.6.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
-    "vite": "^5.0.8"
-  }
-}
-
-    "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remixicon": "^4.6.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
